update-and-work-on-handle-forms-front

--- a/app_web_pokemon/src/main.html
+++ b/app_web_pokemon/src/main.html
@@ -8,12 +8,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.cdnfonts.com/css/pokemon-solid" rel="stylesheet">
+
 </head>
 
 <header>
-
-
-    
 
     <div class="navbar dark-mode">
         <div class="title">
@@ -39,7 +37,6 @@
                 </img>
                 <p class="text-acount">conexion</p>
                 <p><span class="conexion-msg"></span></p>
-
             </div>
         </nav>
     </div>
@@ -49,6 +46,7 @@
 
 
 <body class="main-content dark-mode">
+
     <div class="forms">
         <div class="login">
 
@@ -91,24 +89,34 @@
         </div>
     </div>
     </div>
-    <h2 class="main-title">Welcome to my pokédex</h2>
-    <p class="text-description"> Dans l’univers des Pokémon, les animaux du monde réel n’existent pas. Le monde est
-        peuplé de Pokémon, des créatures qui vivent en harmonie avec les humains, mais possèdent des aptitudes quasiment
-        impossibles pour des animaux du monde réel. Certains Pokémon dits « légendaires » sont les seuls représentants
-        de leur sorte et dans les jeux récents sont des entités incarnant une puissance naturelle.
-        Certains dressent les Pokémon pour organiser des combats entre eux, transportant généralement les Pokémon dans
-        des Poké balls. Ces dresseur Pokémon voyagent à travers le monde dans le but d’attraper le plus grand nombre de
-        Pokémon, puis éventuellement devenir Maître Pokémon, un titre donné au dresseur ayant battu le maître de la
-        ligue. Certains dresseurs enregistrent les informations des Pokémon qu’ils ont capturés ou observés dans un
-        Pokédex, un appareil électronique qui répertorie et affiche les informations sur les différents Pokémon. À
-        partir de l’âge de dix ans, il est possible de commencer son apprentissage de dresseur en recevant une licence
-        de la Ligue Pokémon.
-        Types et évolutions
-        Il existe dix-huit types. Chaque Pokémon possède un ou deux types qui conditionnent la plupart de ses attaques
-        et caractérisent ses forces et ses faiblesses vis-à-vis des autres types. De nombreux Pokémon se transforment en
-        une nouvelle sorte après avoir atteint un certain niveau d’expérience ou d’autres critères plus complexes, cela
-        leur donne souvent de meilleures statistiques de combat et parfois un nouveau type.</p>
 
+    <div class="description">
+        <h2 class="main-title">Welcome to my pokédex</h2>
+        <p class="text-description"> Dans l’univers des Pokémon, les animaux du monde réel n’existent pas. Le monde est
+            peuplé de Pokémon, des créatures qui vivent en harmonie avec les humains, mais possèdent des aptitudes
+            quasiment
+            impossibles pour des animaux du monde réel. Certains Pokémon dits « légendaires » sont les seuls
+            représentants
+            de leur sorte et dans les jeux récents sont des entités incarnant une puissance naturelle.
+            Certains dressent les Pokémon pour organiser des combats entre eux, transportant généralement les Pokémon
+            dans
+            des Poké balls. Ces dresseur Pokémon voyagent à travers le monde dans le but d’attraper le plus grand nombre
+            de
+            Pokémon, puis éventuellement devenir Maître Pokémon, un titre donné au dresseur ayant battu le maître de la
+            ligue. Certains dresseurs enregistrent les informations des Pokémon qu’ils ont capturés ou observés dans un
+            Pokédex, un appareil électronique qui répertorie et affiche les informations sur les différents Pokémon. À
+            partir de l’âge de dix ans, il est possible de commencer son apprentissage de dresseur en recevant une
+            licence
+            de la Ligue Pokémon.
+            Types et évolutions
+            Il existe dix-huit types. Chaque Pokémon possède un ou deux types qui conditionnent la plupart de ses
+            attaques
+            et caractérisent ses forces et ses faiblesses vis-à-vis des autres types. De nombreux Pokémon se
+            transforment en
+            une nouvelle sorte après avoir atteint un certain niveau d’expérience ou d’autres critères plus complexes,
+            cela
+            leur donne souvent de meilleures statistiques de combat et parfois un nouveau type.</p>
+    </div>
     <div class="cards">
         <div class="videos-card">
             <video class="videos" src="../static/allPokemon.mp4" autoplay loop muted plays-inline></video>
@@ -122,54 +130,55 @@
             <video class="videos" src="../static/updatePokemon.mp4" autoplay loop muted plays-inline></video>
 
         </div>
+
+
     </div>
 
 
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script src="./index.js"></script>
-</body>
+    <script src="index.js"></script>
 
 
 
-<section class="card-section">
-    <div class="content">
+    <section class="card-section">
+        <div class="content">
 
-        <div class="card">
+            <div class="card">
 
-            <div class="picture">
-                <img class="img" src="../static/luffy.png" alt="luffy-face">
+                <div class="picture">
+                    <img class="img" src="../static/luffy.png" alt="luffy-face">
+                </div>
+                <h1 class="title-card">Luffy</h1>
+                <p class="text-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias rerum quam
+                    repellendus neque, delectus
+                    impedit voluptas ipsum hic ex dolores? Molestiae eveniet aliquid incidunt eligendi.
+                </p>
+                <a class="signup" href="#">S'abonner</a>
             </div>
-            <h1 class="title-card">Luffy</h1>
-            <p class="text-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias rerum quam
-                repellendus neque, delectus
-                impedit voluptas ipsum hic ex dolores? Molestiae eveniet aliquid incidunt eligendi.
-            </p>
-            <a class="signup" href="#">S'abonner</a>
+
         </div>
+        <div class="espace"></div>
 
-    </div>
-    <div class="espace"></div>
+        </div>
+    </section class=test>
 
-    </div>
-</section class=test>
-
-<section class="test-3d-card">
-    <span class="luffy">
-        <span class="inner-card-backface">
-            <span class="image">
-                <span class="unflip">Unflip</span>
+    <section class="test-3d-card">
+        <span class="luffy">
+            <span class="inner-card-backface">
+                <span class="image">
+                    <span class="unflip">Unflip</span>
+                </span>
             </span>
-        </span>
-        <span class="inner-card">
-            <!-- front of the card -->
-            <span class="flip">Flip</span>
-            <span class="glare"></span> <!-- to store the glare effect -->
-        </span>
-        </div>
-</section>
+            <span class="inner-card">
+                <!-- front of the card -->
+                <span class="flip">Flip</span>
+                <span class="glare"></span> <!-- to store the glare effect -->
+            </span>
+            </div>
+    </section>
 
-
+</body>
 
 </html>
