--- a/app_web_pokemon/src/main.html
+++ b/app_web_pokemon/src/main.html
@@ -50,7 +50,7 @@
     <div class="forms">
         <div class="login">
 
-            <form action="http://localhost:4000/api/login" class="form" id="loginForm">
+            <form action="http://localhost:4000/api/login" id="loginForm" class="form" >
 
                 <h2>Identify yourself</h2>
 
